tests/should_fail/type_mismatch_add.luma
var x = "hello"
x + 5
